Modernise - spotless & formatting