@@ -19,97 +19,102 @@ import org.locationtech.jts.geom.LineString;
 import org.locationtech.jts.geom.PrecisionModel;
 
 /**
- * A dynamic list of the vertices in a constructed offset curve. Automatically removes adjacent
- * vertices which are closer than a given tolerance.
+ * A dynamic list of the vertices in a constructed offset curve. Automatically
+ * removes adjacent vertices which are closer than a given tolerance.
  *
  * @author Martin Davis
  */
 class OffsetSegmentString {
-  private static final Coordinate[] COORDINATE_ARRAY_TYPE = new Coordinate[0];
+	private static final Coordinate[] COORDINATE_ARRAY_TYPE = new Coordinate[0];
 
-  private final ArrayList ptList;
-  private PrecisionModel precisionModel = null;
+	/**
+	 * The distance below which two adjacent points on the curve are considered to
+	 * be coincident. This is chosen to be a small fraction of the offset distance.
+	 */
+	private double minimimVertexDistance = 0.0;
 
-  /**
-   * The distance below which two adjacent points on the curve are considered to be coincident. This
-   * is chosen to be a small fraction of the offset distance.
-   */
-  private double minimimVertexDistance = 0.0;
+	private PrecisionModel precisionModel = null;
 
-  public OffsetSegmentString() {
-    ptList = new ArrayList();
-  }
+	private final ArrayList ptList;
 
-  public void setPrecisionModel(PrecisionModel precisionModel) {
-    this.precisionModel = precisionModel;
-  }
+	public OffsetSegmentString() {
+		ptList = new ArrayList();
+	}
 
-  public void setMinimumVertexDistance(double minimimVertexDistance) {
-    this.minimimVertexDistance = minimimVertexDistance;
-  }
+	public void addPt(Coordinate pt) {
+		Coordinate bufPt = new Coordinate(pt);
+		precisionModel.makePrecise(bufPt);
+		// don't add duplicate (or near-duplicate) points
+		if (isRedundant(bufPt))
+			return;
+		ptList.add(bufPt);
+		// System.out.println(bufPt);
+	}
 
-  public void addPt(Coordinate pt) {
-    Coordinate bufPt = new Coordinate(pt);
-    precisionModel.makePrecise(bufPt);
-    // don't add duplicate (or near-duplicate) points
-    if (isRedundant(bufPt)) return;
-    ptList.add(bufPt);
-    // System.out.println(bufPt);
-  }
+	public void addPts(Coordinate[] pt, boolean isForward) {
+		if (isForward) {
+			for (Coordinate coordinate : pt) {
+				addPt(coordinate);
+			}
+		} else {
+			for (int i = pt.length - 1; i >= 0; i--) {
+				addPt(pt[i]);
+			}
+		}
+	}
 
-  public void addPts(Coordinate[] pt, boolean isForward) {
-    if (isForward) {
-      for (Coordinate coordinate : pt) {
-        addPt(coordinate);
-      }
-    } else {
-      for (int i = pt.length - 1; i >= 0; i--) {
-        addPt(pt[i]);
-      }
-    }
-  }
+	public void closeRing() {
+		if (ptList.isEmpty())
+			return;
+		Coordinate startPt = new Coordinate((Coordinate) ptList.getFirst());
+		Coordinate lastPt = (Coordinate) ptList.getLast();
+		if (startPt.equals(lastPt))
+			return;
+		ptList.add(startPt);
+	}
 
-  /**
-   * Tests whether the given point is redundant relative to the previous point in the list (up to
-   * tolerance).
-   *
-   * @param pt
-   * @return true if the point is redundant
-   */
-  private boolean isRedundant(Coordinate pt) {
-    if (ptList.isEmpty()) return false;
-    Coordinate lastPt = (Coordinate) ptList.getLast();
-    double ptDist = pt.distance(lastPt);
-    if (ptDist < minimimVertexDistance) return true;
-    return false;
-  }
+	public Coordinate[] getCoordinates() {
+		/*
+		 * // check that points are a ring - add the startpoint again if they are not if
+		 * (ptList.size() > 1) { Coordinate start = (Coordinate) ptList.get(0);
+		 * Coordinate end = (Coordinate) ptList.get(ptList.size() - 1); if (!
+		 * start.equals(end) ) addPt(start); }
+		 */
+		Coordinate[] coord = (Coordinate[]) ptList.toArray(COORDINATE_ARRAY_TYPE);
+		return coord;
+	}
 
-  public void closeRing() {
-    if (ptList.isEmpty()) return;
-    Coordinate startPt = new Coordinate((Coordinate) ptList.getFirst());
-    Coordinate lastPt = (Coordinate) ptList.getLast();
-    if (startPt.equals(lastPt)) return;
-    ptList.add(startPt);
-  }
+	/**
+	 * Tests whether the given point is redundant relative to the previous point in
+	 * the list (up to tolerance).
+	 *
+	 * @param pt
+	 * @return true if the point is redundant
+	 */
+	private boolean isRedundant(Coordinate pt) {
+		if (ptList.isEmpty())
+			return false;
+		Coordinate lastPt = (Coordinate) ptList.getLast();
+		double ptDist = pt.distance(lastPt);
+		if (ptDist < minimimVertexDistance)
+			return true;
+		return false;
+	}
 
-  public void reverse() {}
+	public void reverse() {
+	}
 
-  public Coordinate[] getCoordinates() {
-    /*
-      // check that points are a ring - add the startpoint again if they are not
-    if (ptList.size() > 1) {
-       Coordinate start  = (Coordinate) ptList.get(0);
-       Coordinate end    = (Coordinate) ptList.get(ptList.size() - 1);
-       if (! start.equals(end) ) addPt(start);
-     }
-     */
-    Coordinate[] coord = (Coordinate[]) ptList.toArray(COORDINATE_ARRAY_TYPE);
-    return coord;
-  }
+	public void setMinimumVertexDistance(double minimimVertexDistance) {
+		this.minimimVertexDistance = minimimVertexDistance;
+	}
 
-  public String toString() {
-    GeometryFactory fact = new GeometryFactory();
-    LineString line = fact.createLineString(getCoordinates());
-    return line.toString();
-  }
+	public void setPrecisionModel(PrecisionModel precisionModel) {
+		this.precisionModel = precisionModel;
+	}
+
+	public String toString() {
+		GeometryFactory fact = new GeometryFactory();
+		LineString line = fact.createLineString(getCoordinates());
+		return line.toString();
+	}
 }
